--- a/index.html
+++ b/index.html
@@ -3,19 +3,66 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Artist Name</title>
+  <title>Not the Singer</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
-  <div class="hero">
-    <div class="overlay">
-      <h1>Your Artist Name</h1>
-      <div class="links">
-        <a href="https://soundcloud.com/yourprofile" target="_blank">SoundCloud</a>
-        <a href="https://bandcamp.com/yourprofile" target="_blank">Bandcamp</a>
-        <a href="https://open.spotify.com/artist/yourid" target="_blank">Spotify</a>
-      </div>
+
+  <!-- Navbar -->
+  <header>
+    <div class="nav-left">Not the Singer</div>
+    <div class="nav-right" onclick="toggleMenu()">Menu <i class="fas fa-bars"></i></div>
+  </header>
+
+  <!-- Slide-out Menu -->
+  <div id="menu" class="menu">
+    <div class="menu-header">
+      <div class="nav-left">Not the Singer</div>
+      <div class="nav-right" onclick="toggleMenu()">Close <i class="fas fa-times"></i></div>
     </div>
+    <div class="menu-links">
+      <div><span>01</span> Music</div>
+      <div><span>02</span> Info</div>
+    </div>
+    <ul class="platform-links">
+      <li><a href="https://open.spotify.com/artist/50imQLsQADUBJTKncqsb3I" target="_blank"><i class="fab fa-spotify"></i> Spotify</a></li>
+      <li><a href="https://www.instagram.com/not_the_singer" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+      <li><a href="https://notthesinger.bandcamp.com/" target="_blank"><i class="fab fa-bandcamp"></i> Bandcamp</a></li>
+      <li><a href="https://music.apple.com/artist/not-the-singer/1597993257" target="_blank"><i class="fab fa-apple"></i> Apple Music</a></li>
+      <li><a href="https://soundcloud.com/not-the-singer" target="_blank"><i class="fab fa-soundcloud"></i> SoundCloud</a></li>
+      <li><a href="https://www.youtube.com/channel/UCvb-OX6v2zdByJqrXveEGww" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
+    </ul>
   </div>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="overlay">
+      <div class="icons">
+        <a href="https://open.spotify.com/artist/50imQLsQADUBJTKncqsb3I" target="_blank"><i class="fab fa-spotify"></i></a>
+        <a href="https://www.instagram.com/not_the_singer" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://notthesinger.bandcamp.com/" target="_blank"><i class="fab fa-bandcamp"></i></a>
+        <a href="https://music.apple.com/artist/not-the-singer/1597993257" target="_blank"><i class="fab fa-apple"></i></a>
+        <a href="https://soundcloud.com/not-the-singer" target="_blank"><i class="fab fa-soundcloud"></i></a>
+        <a href="https://www.youtube.com/channel/UCvb-OX6v2zdByJqrXveEGww" target="_blank"><i class="fab fa-youtube"></i></a>
+      </div>
+      <p class="credit">made with 💻 not Supertape</p>
+    </div>
+  </section>
+
+  <!-- Music Embed -->
+  <section class="music-embed">
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+      src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/not-the-singer&color=%23161616&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+    </iframe>
+  </section>
+
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById('menu');
+      menu.classList.toggle('open');
+    }
+  </script>
+
 </body>
 </html>
