--- a/index.html
+++ b/index.html
@@ -47,15 +47,13 @@
         <a href="https://soundcloud.com/not-the-singer" target="_blank"><i class="fab fa-soundcloud"></i></a>
         <a href="https://www.youtube.com/channel/UCvb-OX6v2zdByJqrXveEGww" target="_blank"><i class="fab fa-youtube"></i></a>
       </div>
-      <p class="credit">made with 💻 not Supertape</p>
-    </div>
-  </section>
 
-  <!-- Music Embed -->
-  <section class="music-embed">
-    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-      src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/not-the-singer&color=%23161616&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
-    </iframe>
+      <div class="soundcloud-player">
+        <iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay"
+          src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/not-the-singer&color=%23161616&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=true">
+        </iframe>
+      </div>
+    </div>
   </section>
 
   <script>
