--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     }
 
     header .nav-left {
-      font-weight: 700;
+      font-weight: 400;
       font-size: 16px;
       letter-spacing: 0.5px;
     }
@@ -67,26 +67,27 @@
     .menu {
       position: fixed;
       top: 0;
-      left: 100%;
-      width: 100%;
+      right: -320px;
+      width: 320px;
       height: 100vh;
-      background: rgba(0, 0, 0, 0.95);
+      background: rgba(0, 0, 0, 0.7);
       backdrop-filter: blur(20px);
       -webkit-backdrop-filter: blur(20px);
+      border-left: 1px solid rgba(255, 255, 255, 0.1);
       color: #fff;
       z-index: 200;
-      transition: left 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+      transition: right 0.4s cubic-bezier(0.4, 0, 0.2, 1);
       padding: 0;
       overflow-y: auto;
     }
 
     .menu.open {
-      left: 0;
+      right: 0;
     }
 
     .menu-header {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       padding: 20px 24px;
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
@@ -94,23 +95,9 @@
     }
 
     .menu-header .nav-left {
-      font-weight: 700;
+      font-weight: 400;
       font-size: 16px;
       letter-spacing: 0.5px;
-    }
-
-    .menu-header .nav-right {
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      font-size: 14px;
-      transition: opacity 0.2s ease;
-      letter-spacing: 0.5px;
-    }
-
-    .menu-header .nav-right:hover {
-      opacity: 0.7;
     }
 
     .menu-content {
@@ -243,12 +230,13 @@
         font-size: 13px;
       }
 
-      .menu-content {
-        padding: 32px 20px;
+      .menu {
+        right: -280px;
+        width: 280px;
       }
 
-      .menu-links div {
-        font-size: 16px;
+      .menu-content {
+        padding: 32px 20px;
       }
 
       .platform-links a {
@@ -316,43 +304,40 @@
 <body>
   <!-- Navbar -->
   <header>
-    <div class="nav-left">NOT THE SINGER</div>
+    <div class="nav-left">Not the Singer</div>
     <div class="nav-right" onclick="toggleMenu()">
-      MENU <i class="fas fa-bars"></i>
+      Menu <i class="fas fa-bars"></i>
     </div>
   </header>
   
   <!-- Slide-out Menu -->
   <div id="menu" class="menu">
     <div class="menu-header">
-      <div class="nav-left">NOT THE SINGER</div>
-      <div class="nav-right" onclick="toggleMenu()">
-        CLOSE <i class="fas fa-times"></i>
-      </div>
+      <div class="nav-left">Menu</div>
     </div>
     <div class="menu-content">
       <div class="menu-links">
-        <div><span>01</span> MUSIC</div>
-        <div><span>02</span> INFO</div>
+        <div><span>01</span> Music</div>
+        <div><span>02</span> Info</div>
       </div>
       <ul class="platform-links">
         <li><a href="https://open.spotify.com/artist/50imQLsQADUBJTKncqsb3I" target="_blank">
-          <i class="fab fa-spotify"></i> SPOTIFY
+          <i class="fab fa-spotify"></i> Spotify
         </a></li>
         <li><a href="https://www.instagram.com/not_the_singer" target="_blank">
-          <i class="fab fa-instagram"></i> INSTAGRAM
+          <i class="fab fa-instagram"></i> Instagram
         </a></li>
         <li><a href="https://notthesinger.bandcamp.com/" target="_blank">
-          <i class="fab fa-bandcamp"></i> BANDCAMP
+          <i class="fab fa-bandcamp"></i> Bandcamp
         </a></li>
         <li><a href="https://music.apple.com/artist/not-the-singer/1597993257" target="_blank">
-          <i class="fab fa-apple"></i> APPLE MUSIC
+          <i class="fab fa-apple"></i> Apple Music
         </a></li>
         <li><a href="https://soundcloud.com/not-the-singer" target="_blank">
-          <i class="fab fa-soundcloud"></i> SOUNDCLOUD
+          <i class="fab fa-soundcloud"></i> SoundCloud
         </a></li>
         <li><a href="https://www.youtube.com/channel/UCvb-OX6v2zdByJqrXveEGww" target="_blank">
-          <i class="fab fa-youtube"></i> YOUTUBE
+          <i class="fab fa-youtube"></i> YouTube
         </a></li>
       </ul>
     </div>
