--- a/index.html
+++ b/index.html
@@ -296,13 +296,17 @@
       }
 
       .overlay {
-        padding: 40px 20px 40px;
+        padding: 40px 20px 80px;
       }
     }
 
     @media screen and (max-width: 480px) {
       .hero {
         background-attachment: scroll;
+      }
+
+      .overlay {
+        padding: 32px 16px 100px;
       }
 
       .nav-bubbles {
