--- a/index.html
+++ b/index.html
@@ -222,28 +222,24 @@
       z-index: 100;
       display: flex;
       justify-content: center;
-      gap: 24px;
+      gap: 32px;
       flex-wrap: wrap;
-      background: rgba(0, 0, 0, 0.7);
-      backdrop-filter: blur(20px);
-      -webkit-backdrop-filter: blur(20px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 30px;
-      padding: 16px 24px;
       max-width: 90vw;
     }
 
     .floating-icons a {
       color: #fff;
-      font-size: 24px;
+      font-size: 28px;
       transition: all 0.3s ease;
       text-decoration: none;
       opacity: 0.85;
+      filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.8));
     }
 
     .floating-icons a:hover {
       transform: scale(1.2);
       opacity: 1;
+      filter: drop-shadow(0 6px 12px rgba(0, 0, 0, 0.9));
     }
 
     .soundcloud-player {
@@ -287,27 +283,26 @@
       }
 
       .bubble {
-        padding: 10px 16px;
-        font-size: 13px;
-      }
-
-      .bubble.logo {
+        padding: 12px 18px;
         font-size: 14px;
       }
 
+      .bubble.logo {
+        font-size: 15px;
+      }
+
       .menu-dropdown {
-        min-width: 180px;
+        min-width: 200px;
         right: -10px;
       }
 
       .floating-icons {
-        bottom: 16px;
-        gap: 20px;
-        padding: 12px 20px;
+        bottom: 20px;
+        gap: 28px;
       }
 
       .floating-icons a {
-        font-size: 22px;
+        font-size: 26px;
       }
 
       .overlay {
@@ -321,34 +316,33 @@
       }
 
       .nav-bubbles {
-        top: 12px;
-        left: 12px;
-        right: 12px;
+        top: 14px;
+        left: 14px;
+        right: 14px;
       }
 
       .bubble {
-        padding: 8px 14px;
-        font-size: 12px;
-      }
-
-      .bubble.logo {
+        padding: 10px 16px;
         font-size: 13px;
       }
 
+      .bubble.logo {
+        font-size: 14px;
+      }
+
       .menu-dropdown {
-        min-width: 160px;
-        right: -20px;
+        min-width: 180px;
+        right: -15px;
       }
 
       .floating-icons {
-        bottom: 12px;
-        gap: 16px;
-        padding: 10px 16px;
-        border-radius: 25px;
+        bottom: 24px;
+        gap: 24px;
+        max-width: 85vw;
       }
 
       .floating-icons a {
-        font-size: 20px;
+        font-size: 24px;
       }
 
       .overlay {
