--- a/index.html
+++ b/index.html
@@ -213,6 +213,18 @@
       text-align: center;
     }
 
+    /* Fixed Bottom Gradient Overlay */
+    .bottom-gradient {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 120px;
+      background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.4) 50%, rgba(0, 0, 0, 0.8) 100%);
+      z-index: 90;
+      pointer-events: none;
+    }
+
     /* Floating Social Icons */
     .floating-icons {
       position: fixed;
@@ -223,7 +235,7 @@
       display: flex;
       justify-content: center;
       gap: 32px;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       max-width: 90vw;
     }
 
@@ -233,13 +245,11 @@
       transition: all 0.3s ease;
       text-decoration: none;
       opacity: 0.85;
-      filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.8));
     }
 
     .floating-icons a:hover {
       transform: scale(1.2);
       opacity: 1;
-      filter: drop-shadow(0 6px 12px rgba(0, 0, 0, 0.9));
     }
 
     .soundcloud-player {
@@ -297,12 +307,13 @@
       }
 
       .floating-icons {
-        bottom: 20px;
-        gap: 28px;
+        bottom: 24px;
+        gap: 20px;
+        max-width: 95vw;
       }
 
       .floating-icons a {
-        font-size: 26px;
+        font-size: 32px;
       }
 
       .overlay {
@@ -336,13 +347,21 @@
       }
 
       .floating-icons {
-        bottom: 24px;
-        gap: 24px;
-        max-width: 85vw;
+        bottom: 30px;
+        gap: 16px;
+        max-width: 98vw;
+        overflow-x: auto;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+      }
+
+      .floating-icons::-webkit-scrollbar {
+        display: none;
       }
 
       .floating-icons a {
-        font-size: 24px;
+        font-size: 36px;
+        flex-shrink: 0;
       }
 
       .overlay {
@@ -442,6 +461,9 @@
       </div>
     </div>
   </div>
+
+  <!-- Fixed Bottom Gradient -->
+  <div class="bottom-gradient"></div>
 
   <!-- Floating Social Icons -->
   <div class="floating-icons">
