--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
       pointer-events: none;
     }
 
-    /* Floating Social Icons */
+    /* Static Social Icons */
     .floating-icons {
-      position: fixed;
+      position: absolute;
       bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
@@ -462,10 +462,7 @@
     </div>
   </div>
 
-  <!-- Fixed Bottom Gradient -->
-  <div class="bottom-gradient"></div>
-
-  <!-- Floating Social Icons -->
+  <!-- Static Social Icons -->
   <div class="floating-icons">
     <a href="https://open.spotify.com/artist/50imQLsQADUBJTKncqsb3I" target="_blank">
       <i class="fab fa-spotify"></i>
