--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons@v11/simple-icons.css">
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css?v=5" />
