--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Navigation -->
   <div class="nav-bubbles">
     <div class="nav-left-bubble">
-      <div class="bubble logo" onclick="goHome()">Not the Singer</div>
+      <div class="bubble logo">Not the Singer</div>
     </div>
     <div class="nav-right-bubble">
       <div class="bubble menu-trigger" onclick="toggleMenu()" id="menuTrigger">
