--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="menu-dropdown" id="menuDropdown">
         <div class="menu-section">
           <div class="nav-items">
-            <div class="nav-item" onclick="showMusic()">
+            <div class="nav-item">
               <span>01</span> Music
             </div>
             <div class="nav-item">
