--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css?v=5" />
+  <link rel="stylesheet" href="style.css?v=6" />
 </head>
 
 <body>
   <!-- Navigation -->
   <div class="nav-bubbles">
     <div class="nav-left-bubble">
-      <div class="bubble logo">Not the Singer</div>
+      <div class="bubble logo" onclick="goHome()">Not the Singer</div>
     </div>
     <div class="nav-right-bubble">
       <div class="bubble menu-trigger" onclick="toggleMenu()" id="menuTrigger">
@@ -79,7 +79,7 @@
         <button class="filter-btn" data-filter="remix">Remixes</button>
         <button class="filter-btn" data-filter="mix">Mixes</button>
       </div>
-      <div id="albumGrid" class="album-grid">
+      <div id="albumGrid" class="album-grid"></div>
     </div>
   </div>
 
